# local-dashboard-widget-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: catalog-viewer.md  integration.md  manifest.md  presets.md  renderers.md
examples/catalog-viewer/: catalog-data.js  index.html  viewer.css  viewer.js
examples/presets/: stat-compact.json
examples/widgets/: cpu-load.json  service-table.json
schemas/: contracts.schema.json
scripts/: build_catalog_viewer.py  repo_quality_gate.sh  smoke_test.sh
src/local_dashboard_widget_sdk/: __init__.py  cli.py  core.py  schema.py  typescript.py
tests/: catalog_viewer_check.py  test_core.py
types/: contracts.d.ts
